--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 baseurl: '/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'Meld Tech'
 
 logo:
   mobile: "images/logo/logo-mobile.svg"
   mobile_height: "32px"
   mobile_width: "32px"
-  desktop: "images/logo/MeldTechEngineeringSmall.svg"
+  desktop: "images/logo/MeldTechEngineeringSmall.png"
   desktop_height: "32px"
   desktop_width: "120px"
 
