--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'meldtechengineering@gmail.com'
-phone: '1800 123 000'
+email: 'meldtechengg@gmail.com'
+phone: '+91 9638026767'
 contact_button_link: 'contact'
