--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -5,7 +5,7 @@ main:
   - name: "Services"
     url: "/services/"
     weight: 2
-  - name: "About"
+  - name: "About Us"
     url: "/about/"
     weight: 4
   - name: "Contact"
